--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ runs:
     - id: create-container
       run: |
         mkdir -p ${{ inputs.result-dir }}
-        podman run -dt --privileged -v ${{ inputs.result-dir }}:/v fedora:latest > action.cid
+        podman run -dt --privileged -v ${{ inputs.src }}:/in -v ${{ inputs.result-dir }}:/out fedora:latest > action.cid
       shell: bash
 
     - id: init-mock-env
@@ -51,7 +51,7 @@ runs:
         cid=$(cat action.cid)
         srpm=$(basename ${{ inputs.srpm }})
         podman cp ${{ inputs.srpm }} $cid:/tmp/$srpm
-        podman exec $cid mock -r ${{ inputs.chroot }} rebuild /tmp/$srpm --resultdir /v
+        podman exec $cid mock -r ${{ inputs.chroot }} buildsrpm --spec ${{ inputs.spec }} --sources /in --resultdir /out
       shell: bash
 
     - id: show-logs
