--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,10 @@ runs:
         cid=$(cat action.cid)
         spec=$(basename ${{ inputs.spec }})
         podman cp ${{ inputs.spec }} $cid:/tmp/$spec
-        podman exec $cid mock -r ${{ inputs.chroot }} buildsrpm --spec /tmp/$spec --sources /in --resultdir /out
+        podman exec $cid mock -r ${{ inputs.chroot }} --copyin /tmp/$spec /builddir/build/SPECS
+        podman exec $cid mock -r ${{ inputs.chroot }} --copyin /in /builddir/build/SOURCES
+        podman exec $cid mock -r ${{ inputs.chroot }} --shell rpmbuild -bs /builddir/build/SPECS/$spec
+        podman exec $cid mock -r ${{ inputs.chroot }} --copyout /builddir/build/SRPMS /out
       shell: bash
 
     - id: show-logs
