--- a/action.yml
+++ b/action.yml
@@ -54,7 +54,7 @@ runs:
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin /tmp/$spec /builddir/build/SPECS
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin /in /builddir/build/SOURCES
         podman exec $cid mock -r ${{ inputs.chroot }} --shell rpmbuild -bs /builddir/build/SPECS/$spec
-        podman exec $cid mock -r ${{ inputs.chroot }} --copyout /builddir/build/SRPMS /out
+        podman exec $cid mock -r ${{ inputs.chroot }} --copyout /builddir/build/SRPMS/* /out
       shell: bash
 
     - id: show-logs
