--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
   result-dir:
     description: Show mock logs
     required: true
-    default: /tmp/mock
+    default: .
 
 runs:
   using: composite
@@ -31,7 +31,7 @@ runs:
     - id: create-container
       run: |
         mkdir -p ${{ inputs.result-dir }}
-        podman run -dt --privileged -v ${{ inputs.src }}:/in -v ${{ inputs.result-dir }}:/out fedora:latest > action.cid
+        podman run -dt --privileged -v ${{ inputs.src }}:/in:ro -v ${{ inputs.result-dir }}:/out fedora:latest > action.cid
       shell: bash
 
     - id: init-mock-env
