--- a/action.yml
+++ b/action.yml
@@ -19,12 +19,7 @@ inputs:
   result-dir:
     description: Show mock logs
     required: true
-    default: /tmp/mock
-  debug:
-    description: Show mock logs
-    required: false
-
-# mock [options] --buildsrpm {--spec spec --sources src | --scm-enable}
+    default: .
 
 runs:
   using: composite
@@ -35,8 +30,8 @@ runs:
 
     - id: create-container
       run: |
-        mkdir -p ${{ inputs.resultdir }}
-        podman run -dt --privileged -v ${{ inputs.resultdir }}:/v fedora:latest > action.cid
+        mkdir -p ${{ inputs.result-dir }}
+        podman run -dt --privileged -v ${{ inputs.src }}:/in:ro -v ${{ inputs.result-dir }}:/out fedora:latest > action.cid
       shell: bash
 
     - id: init-mock-env
@@ -49,15 +44,10 @@ runs:
     - id: build
       run: |
         cid=$(cat action.cid)
-        srpm=$(basename ${{ inputs.srpm }})
-        podman cp ${{ inputs.srpm }} $cid:/tmp/$srpm
-        podman exec $cid mock -r ${{ inputs.chroot }} rebuild /tmp/$srpm --resultdir /v
-      shell: bash
-
-    - id: show-logs
-      if: ${{ inputs.debug }}
-      run: |
-        cid=$(cat action.cid)
-        podman exec $cid ls -R /tmp/rpmbuild
-        podman exec $cid cat /tmp/rpmbuild/build.log
+        spec=$(basename ${{ inputs.spec }})
+        podman cp ${{ inputs.spec }} $cid:/tmp/$spec
+        podman exec $cid mock -r ${{ inputs.chroot }} --copyin /tmp/$spec /builddir/build/SPECS
+        podman exec $cid mock -r ${{ inputs.chroot }} --copyin /in /builddir/build/SOURCES
+        podman exec $cid mock -r ${{ inputs.chroot }} --shell rpmbuild -bs /builddir/build/SPECS/$spec
+        podman exec $cid mock -r ${{ inputs.chroot }} --copyout /builddir/build/SRPMS/* /out
       shell: bash
