--- a/.github/workflows/with-sources.yml
+++ b/.github/workflows/with-sources.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           chroot: fedora-39-x86_64
           spec: test/simple/simple.spec
+          src: test/with-sources
       - name: Build rpm
         uses: jw3/mock-rpm@v0
         with:
