--- a/.github/workflows/with-sources.yml
+++ b/.github/workflows/with-sources.yml
@@ -1,4 +1,4 @@
-name: CI (simple)
+name: CI (with dir sources)
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  rpm:
+  dir-sources:
     name: Build rpm
     runs-on: ubuntu-latest
     steps:
@@ -32,15 +32,24 @@ jobs:
           path: |
             /tmp/mock/*.rpm
 
-  it:
-    needs: [ rpm ]
-    name: Integration test rpm
+  file-sources:
+    name: Build rpm
     runs-on: ubuntu-latest
-    container: fedora:39
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/checkout@v4
+      - name: Build srpm
+        uses: ./
+        with:
+          chroot: fedora-39-x86_64
+          spec: test/simple/simple.spec
+          src: test/with-sources/withsources.tar.gz
+      - name: Build rpm
+        uses: jw3/mock-rpm@v0
+        with:
+          chroot: fedora-39-x86_64
+          srpm: simple-*.src.rpm
+      - uses: actions/upload-artifact@v3
         with:
           name: rpm-artifacts
-      - run: dnf install -y simple-*.x86_64.rpm
-      - name: Test
-        run: simple
+          path: |
+            /tmp/mock/*.rpm
