--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
       shell: bash
 
     - id: map-source
-      if: inputs.src != ""
+      if: inputs.src != null
       run: |
         src = "${{ inputs.src }}"
         if [[ "$src" != /* ]]; then src = "./$src"; fi 
