--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ runs:
     - id: map-source
       if: inputs.src != null
       run: |
-        ls ${{ github.workspace }}
+        ls -alR ${{ github.workspace }}
         src="${{ inputs.src }}"
         if [[ "$src" != /* ]]; then src="${{ github.workspace }}/$src"; fi 
         if [[ -d ${src} ]]; then
