--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           name: rpm-artifacts
           path: |
-            /tmp/mock/*.rpm
+            *.rpm
 
   it:
     needs: [ rpm ]
