--- a/.github/workflows/with-sources.yml
+++ b/.github/workflows/with-sources.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           name: rpm-artifacts
           path: |
-            /tmp/mock/*.rpm
+            *.rpm
 
   file-sources:
     name: Build rpm from file source
