--- a/action.yml
+++ b/action.yml
@@ -68,6 +68,7 @@ runs:
         podman cp ${{ inputs.spec }} $cid:/tmp/$spec
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin /tmp/$spec /builddir/build/SPECS
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin /in /builddir/build/SOURCES || true
+        podman exec $cid ls -alR /builddir/build
         podman exec $cid mock -r ${{ inputs.chroot }} --shell rpmbuild -bs /builddir/build/SPECS/$spec
         podman exec $cid mock -r ${{ inputs.chroot }} --copyout /builddir/build/SRPMS/* /out
       shell: bash
