--- a/action.yml
+++ b/action.yml
@@ -65,7 +65,9 @@ runs:
       if: inputs.src != null
       run: |
         cid=$(cat action.cid)
-        podman exec $cid mock -r ${{ inputs.chroot }} --copyin /in /builddir/build/SOURCES
+        for f in $(podman exec $cid ls /in); do
+          podman exec $cid mock -r ${{ inputs.chroot }} --copyin /in/$f /builddir/build/SOURCES
+        done
         podman exec $cid ls -alR /var/lib/mock/fedora-39-x86_64/root/builddir/build/SOURCES
       shell: bash
 
@@ -80,6 +82,7 @@ runs:
     - id: build
       run: |
         cid=$(cat action.cid)
+        spec=$(basename ${{ inputs.spec }})
         podman exec $cid mock -r ${{ inputs.chroot }} --shell rpmbuild -bs /builddir/build/SPECS/$spec
       shell: bash
 
