--- a/.github/workflows/with-sources.yml
+++ b/.github/workflows/with-sources.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: |
+          mkdir withsources
+          mv with-sources/build-withsources withsources
+          tar cvzf withsources.tar.gz withsources
+          mv withsources.tar.gz with-sources
+        working-directory: test
       - name: Build srpm
         uses: ./
         with:
