--- a/.github/workflows/ci-simple.yml
+++ b/.github/workflows/ci-simple.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI (simple)
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
         with:
           name: rpm-artifacts
           path: |
-            /tmp/mock/*.rpm
+            *.rpm
 
   it:
     needs: [ rpm ]
