--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ inputs:
   src:
     description: Path (file or dir) mapped to the rpmbuild/SOURCES directory
     required: false
+  cache:
+    description: Enable chroot environment caching
+    required: true
+    default: 'true'
   result-dir:
     description: Target path for writing build artifacts
     required: true
@@ -50,16 +54,45 @@ runs:
         echo -n "$arg" > /tmp/mock-container-args
       shell: bash
 
+    - id: restore-cache
+      if: inputs.cache == 'true'
+      uses: actions/cache/restore@v3
+      with:
+        path: /tmp/mock
+        key: ${{ inputs.chroot }}-${{ hashFiles(${{ inputs.spec }}) }}
+
+    - id: load-cache
+      if: inputs.cache == 'true' && steps.restore-cache.outputs.cache-hit == 'true'
+      run: podman load /tmp/mock/image.tar.gz
+      shell: bash
+
     - id: create-container
+      if: inputs.cache != 'true' || steps.restore-cache.outputs.cache-hit != 'true'
       run: podman run -dt --privileged $(cat /tmp/mock-container-args) -v ${{ inputs.result-dir }}:/out fedora:latest > action.cid
       shell: bash
 
     - id: init-mock-env
+      if: inputs.cache != 'true' || steps.restore-cache.outputs.cache-hit != 'true'
       run: |
         cid=$(cat action.cid)
         podman exec $cid dnf install -y mock
         podman exec $cid mock -r ${{ inputs.chroot }} --init
       shell: bash
+
+    - id: write-cache
+      if: inputs.cache == 'true' && steps.restore-cache.outputs.cache-hit != 'true'
+      run: |
+        cid=$(cat action.cid)
+        podman commit $cid fedora:latest
+        podman save fedora:latest /tmp/mock/image.tar.gz
+      shell: bash
+
+    - id: save-cache
+      if: inputs.cache == 'true' && steps.restore-cache.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v3
+      with:
+        path: /tmp/mock
+        key: ${{ steps.restore-cache.outputs.cache-primary-key }}
 
     - id: copy-in-sources
       if: inputs.src != null
