--- a/action.yml
+++ b/action.yml
@@ -61,7 +61,7 @@ runs:
         path: /tmp/mock
         key: ${{ inputs.chroot }}-${{ hashFiles(inputs.spec) }}
 
-    - id: load-cache
+    - id: load-cached-image
       if: inputs.cache == 'true' && steps.restore-cache.outputs.cache-hit == 'true'
       run: podman load --input /tmp/mock/image.tar.gz
       shell: bash
@@ -79,11 +79,12 @@ runs:
         podman exec $cid mock -r ${{ inputs.chroot }} --init
       shell: bash
 
-    - id: write-cache
+    - id: write-cached-image
       if: inputs.cache == 'true' && steps.restore-cache.outputs.cache-hit != 'true'
       run: |
         cid=$(cat action.cid)
         podman commit $cid fedora:latest
+        mkdir -p /tmp/mock
         podman save fedora:latest | gzip > /tmp/mock/image.tar.gz
       shell: bash
 
