--- a/action.yml
+++ b/action.yml
@@ -64,7 +64,7 @@ runs:
       run: |
         cid=$(cat action.cid)
         podman exec $cid dnf install -y mock
-        #podman exec $cid mock -r ${{ inputs.chroot }} --init
+        podman exec $cid mock -r ${{ inputs.chroot }} --init
       shell: bash
       if: ${{ inputs.image }} == 'fedora:latest'
 
