--- a/action.yml
+++ b/action.yml
@@ -55,7 +55,7 @@ runs:
       shell: bash
 
     - id: create-container
-      run: podman run -dt --dns=8.8.8.8 --privileged $(cat /tmp/mock-container-args) -v ${{ inputs.result-dir }}:/out ${{ inputs.image }} > action.cid
+      run: podman run -dt --privileged $(cat /tmp/mock-container-args) -v ${{ inputs.result-dir }}:/out ${{ inputs.image }} > action.cid
       shell: bash
 
     # Skip this job if ${{ inputs.image }} is not the default.  It is expected that any pre-built Docker image
