--- a/action.yml
+++ b/action.yml
@@ -60,7 +60,7 @@ runs:
       uses: actions/cache/restore@v3
       with:
         path: /tmp/cache/mock
-        key: ${{ inputs.chroot }}-${{ hashFiles(inputs.spec) }}
+        key: mock-${{ inputs.chroot }}-${{ hashFiles(inputs.spec) }}
 
     - id: create-container
       run: podman run -dt --privileged $(cat /tmp/mock-container-args) -v ${{ inputs.result-dir }}:/out -v /tmp/cache/mock:/var/cache/mock fedora:latest > action.cid
