--- a/action.yml
+++ b/action.yml
@@ -63,7 +63,9 @@ runs:
         key: mock-${{ inputs.chroot }}-${{ hashFiles(inputs.spec) }}
 
     - id: create-container
-      run: podman run -dt --privileged $(cat /tmp/mock-container-args) -v ${{ inputs.result-dir }}:/out -v /tmp/cache/mock:/var/cache/mock fedora:latest > action.cid
+      run: |
+        ls -alR /tmp/cache/mock
+        podman run -dt --privileged $(cat /tmp/mock-container-args) -v ${{ inputs.result-dir }}:/out -v /tmp/cache/mock:/var/cache/mock fedora:latest > action.cid
       shell: bash
 
     - id: init-mock-env
