--- a/action.yml
+++ b/action.yml
@@ -69,6 +69,7 @@ runs:
       shell: bash
 
     - id: init-mock-env
+      if: inputs.cache != 'true' || steps.restore-mock-cache.outputs.cache-hit != 'true'
       run: |
         cid=$(cat action.cid)
         podman exec $cid dnf install -y mock
@@ -101,7 +102,7 @@ runs:
       shell: bash
 
     - id: save-cache
-      if: inputs.cache == 'true' && always()
+      if: inputs.cache == 'true' && steps.restore-mock-cache.outputs.cache-hit != 'true'
       uses: actions/cache/save@v3
       with:
         path: /tmp/cache/mock
