--- a/action.yml
+++ b/action.yml
@@ -68,11 +68,18 @@ runs:
         podman run -dt --privileged $(cat /tmp/mock-container-args) -v ${{ inputs.result-dir }}:/out -v /tmp/cache/mock:/var/cache/mock fedora:latest > action.cid
       shell: bash
 
-    - id: init-mock-env
+    - id: install-mock
       if: inputs.cache != 'true' || steps.restore-mock-cache.outputs.cache-hit != 'true'
       run: |
         cid=$(cat action.cid)
         podman exec $cid dnf install -y mock
+      shell: bash
+
+
+    - id: init-mock
+      if: inputs.cache != 'true' || steps.restore-mock-cache.outputs.cache-hit != 'true'
+      run: |
+        cid=$(cat action.cid)
         podman exec $cid mock -r ${{ inputs.chroot }} --init
       shell: bash
 
